moved IntegerConversionUtil, JarFileUtil, JarInputStreamUtil, JarURLConnectionUtil.
git-svn-id: https://www.seasar.org/svn/sandbox/s2util/trunk@60 03a6405a-cd80-4c0c-ae08-6356e5c5245e